tests/NormalTests/paczka1/fuzzy1/70283403.err
Error in line 7: S231 S231 21,0
Error in line 10: jhfbxXUdh S959 13,4
Error in line 11: S231 S697 9,0
Error in line 22: mvOQvJuOm2 S231 33,0
Error in line 12: jhfbxXUdh S697 48,9
Error in line 35: 1Qm S959 74,7
